# nu_plugin_mw

./: README.md  pyproject.toml
nu_plugin_mw/: __main__.py  cli_entrypoint.py
